Fixing display on firefox.

--- a/css/addons.css
+++ b/css/addons.css
@@ -618,18 +618,26 @@ html, body {
 input[type=submit].save_button {
 	float:right !important;
 	margin-top: -51px !important;
-	display: inline-block;
-	padding: 4px 12px;
-	font-size: 12px;
 	text-transform: uppercase;
-	color: #333333;
-	text-align: center;
-	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-	vertical-align: middle;
-	cursor: pointer;
-	background-color: #f5f5f5;
-	border: 1px solid #cccccc;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-	line-height: 21px;
+	  display: inline-block;
+	  *display: inline;
+	  padding: 4px 12px;
+	  margin-bottom: 0;
+	  *margin-left: .3em;
+	  font-size: 12px;
+	  line-height: 20px;
+	  color: #333333;
+	  text-align: center;
+	  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+	  vertical-align: middle;
+	  cursor: pointer;
+	  background-color: #f5f5f5;
+	  *background-color: #e6e6e6;
+	  border: 1px solid #cccccc;
+	  *border: 0;
+	  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+	  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+	  *zoom: 1;
+	  line-heihgt: 20px;
+	  height: 31px;
 }
